--- a/javah.somee/www/index.html
+++ b/javah.somee/www/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div class="app">
-            <p id="deviceready" class="event">Connecting to Device</p>
+            <p id="deviceready" class="event">Connecting to Device!!!</p>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="scripts/platformOverrides.js"></script>
